spices/raylib/tests/errors/raylib-texture-leak.tur
;; U1 negative: a :linear Texture2D must be consumed (unloaded). Loading a
;; texture and drawing it but never calling unload-texture is a GPU leak.
;;   tur check -Xsubstructural tests/errors/raylib-texture-leak.tur
;;   => error [TUR-E0100]: linear value 't' dropped without being consumed
;; Compile-fail fixture (see raylib-texture-use-after-unload.tur for the note).
(defmodule raylib_texture_leak_test
  (export)
(import raylib/types    :refer [Texture2D Color])
(import raylib/textures :refer [load-texture draw-texture])
(defn leak-texture [tint : Color] : void
  (let [t (load-texture "x.png")]
    (draw-texture t 0 0 tint)))   ;; ERROR TUR-E0100: t never unloaded
) ;; end
